--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -242,6 +242,21 @@ tbody.notion-collection-table__body{
     }
 }
 
+.notion-root .notion-text .notion-text__content .notion-semantic-string span strong .notion-link, .notion-text .notion-text__content .notion-semantic-string span .notion-link strong{
+    color: var(--color-text-default) !important;
+    background: var(--color-cta-background) !important;
+    padding: 10px 15px !important;
+    margin: 20px 0px !important;
+    border-radius: 10px !important;
+    opacity: 1 !important;
+    font-weight: 500 !important;
+    display: inline-flex !important;
+    justify-content: center !important;
+    transition: background .2s ease-in-out !important;
+}
+
+
+
 ::selection{
     background: var(--color-link-default) !important;
     opacity: .5 !important;
