--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -247,7 +247,7 @@ tbody.notion-collection-table__body{
     background: var(--color-cta-background) !important;
     padding: 10px 15px !important;
     margin: 20px 0px !important;
-    border-radius: 50% !important;
+    border-radius: 50px !important;
     opacity: 1 !important;
     font-weight: 500 !important;
     display: inline-flex !important;
