--- a/style/main.css
+++ b/style/main.css
@@ -328,7 +328,12 @@ p {
 }
 .parent-page__index .notion-heading {
   width: 58.33333333% !important;
-  margin: 0 auto !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  margin-bottom: 1.5rem !important;
+}
+.parent-page__index h3.notion-heading strong {
+  text-align: left !important;
 }
 
 .super-content.max-width {
