--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -100,10 +100,12 @@ tbody.notion-collection-table__body{
 }
 
  .notion-property.notion-property__file.property-63756178 a div{
-    width: 150px !important;
-    height: 150px !important;
+    width: 350px !important;
+    max-width: 350px !important;
+    height: 350px !important;
     img{
         border-radius: 8px !important;
+        object-fit: cover !important;
     }
 }
 
@@ -447,6 +449,11 @@ html ::-webkit-scrollbar{
         padding: 2rem !important;
         grid-template-columns: 1fr !important;
     }
+
+    .notion-property.notion-property__file.property-63756178 a div{
+    width: 150px !important;
+    max-width: 150px !important;
+    height: 150px !important;
 }
 
 
