--- a/style/main.css
+++ b/style/main.css
@@ -433,11 +433,13 @@ tbody.notion-collection-table__body {
 }
 
 .notion-property.notion-property__file.property-63756178 a div {
-  width: 150px !important;
-  height: 150px !important;
+  width: 350px !important;
+  max-width: 350px !important;
+  height: 350px !important;
 }
 .notion-property.notion-property__file.property-63756178 a div img {
   border-radius: 8px !important;
+  object-fit: cover !important;
 }
 
 /* .notion-collection-table__cell:nth-child(1){
