image tavble width

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -454,7 +454,7 @@ html ::-webkit-scrollbar{
     width: 150px !important;
     max-width: 150px !important;
     height: 150px !important;
+    }
+
 }
-
-
 
