--- a/style/main.css
+++ b/style/main.css
@@ -743,4 +743,9 @@ html ::-webkit-scrollbar-thumb {
     padding: 2rem !important;
     grid-template-columns: 1fr !important;
   }
+  .notion-property.notion-property__file.property-63756178 a div {
+    width: 150px !important;
+    max-width: 150px !important;
+    height: 150px !important;
+  }
 }/*# sourceMappingURL=main.css.map */
