--- a/style/main.css
+++ b/style/main.css
@@ -414,8 +414,7 @@ tbody.notion-collection-table__body {
 }
 
 .notion-collection-table td:first-of-type, .notion-collection-table th:first-of-type {
-  grid-row: span 3 !important;
-  grid-column: span 1 !important;
+  display: inline !important;
 }
 
 .notion-collection-table td:last-child, .notion-collection-table th:last-child {
@@ -433,9 +432,8 @@ tbody.notion-collection-table__body {
 }
 
 .notion-property.notion-property__file.property-63756178 a div {
-  width: 350px !important;
-  max-width: 350px !important;
-  height: 350px !important;
+  width: 100% !important;
+  height: 500px !important;
 }
 .notion-property.notion-property__file.property-63756178 a div img {
   border-radius: 8px !important;
@@ -742,10 +740,5 @@ html ::-webkit-scrollbar-thumb {
   .notion-collection-table tr {
     padding: 2rem !important;
     grid-template-columns: 1fr !important;
-  }
-  .notion-property.notion-property__file.property-63756178 a div {
-    width: 150px !important;
-    max-width: 150px !important;
-    height: 150px !important;
   }
 }/*# sourceMappingURL=main.css.map */
