--- a/style/main.css
+++ b/style/main.css
@@ -417,6 +417,14 @@ tbody.notion-collection-table__body {
   display: inline !important;
 }
 
+.notion-collection-table td:nth-child(2) {
+  font-size: 2rem !important;
+  margin-top: 1.5rem !important;
+  margin-bottom: 0.5rem !important;
+  font-weight: 500 !important;
+  font-family: "Lexend", sans-serif !important;
+}
+
 .notion-collection-table td:last-child, .notion-collection-table th:last-child {
   position: absolute !important;
   padding: 10px 15px !important;
