--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -208,13 +208,15 @@ tbody.notion-collection-table__body{
         display: flex !important;
         flex-direction: column !important;
         box-shadow: none !important;
-        border: none !important;
+        border: 1px solid var(--color-border-default) !important;
         padding: 0px !important;
         .notion-collection-card__cover{
             flex: 0 0 290px !important;
+            border-radius: 10px 10px 0 0 !important;
         }
         .notion-collection-card__content{
             width: auto !important;
+            padding: 2rem 1.5rem !important;
             .notion-collection-card__property:nth-child(2){
                 font-size: 1rem !important;
             }
