--- a/style/main.css
+++ b/style/main.css
@@ -536,14 +536,16 @@ tbody.notion-collection-table__body {
   display: flex !important;
   flex-direction: column !important;
   box-shadow: none !important;
-  border: none !important;
+  border: 1px solid var(--color-border-default) !important;
   padding: 0px !important;
 }
 .notion-collection-gallery.small .notion-collection-card .notion-collection-card__cover {
   flex: 0 0 290px !important;
+  border-radius: 10px 10px 0 0 !important;
 }
 .notion-collection-gallery.small .notion-collection-card .notion-collection-card__content {
   width: auto !important;
+  padding: 2rem 1.5rem !important;
 }
 .notion-collection-gallery.small .notion-collection-card .notion-collection-card__content .notion-collection-card__property:nth-child(2) {
   font-size: 1rem !important;
