bold text align left

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -44,6 +44,12 @@ h3.notion-heading{
 
 h3.notion-heading strong{
     text-align: left !important;
+    font-weight: 600 !important;
+}
+
+strong{
+    text-align: left !important;
+    font-weight: 600 !important;
 }
 
 p{
