toggle display none

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -429,6 +429,12 @@ html ::-webkit-scrollbar{
     
 }
 
+//toggle
+.notion-toggle .bg-pink{
+    display: none;
+}
+
+
 @media (max-width: 546px){
     h1.notion-heading{
         font-size: var(--font-size-4) !important;
