--- a/style/main.css
+++ b/style/main.css
@@ -734,6 +734,10 @@ html ::-webkit-scrollbar-thumb {
     width: auto !important;
   }
 }
+.notion-toggle .bg-pink {
+  display: none;
+}
+
 @media (max-width: 546px) {
   h1.notion-heading {
     font-size: var(--font-size-4) !important;
