--- a/style/main.css
+++ b/style/main.css
@@ -124,6 +124,7 @@ h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
 
 h2.notion-heading {
   font-size: var(--font-size-5) !important;
+  text-align: center !important;
   line-height: 1.1 !important;
   margin-bottom: 1.5rem !important;
 }
@@ -131,19 +132,8 @@ h2.notion-heading {
 h3.notion-heading {
   font-size: var(--font-size-4) !important;
   font-weight: 500 !important;
-  text-align: center !important;
-  line-height: 1.3 !important;
+  line-height: 1.5 !important;
   margin-bottom: 1.5rem !important;
-}
-
-h3.notion-heading strong {
-  text-align: left !important;
-  font-weight: 600 !important;
-}
-
-strong {
-  text-align: left !important;
-  font-weight: 600 !important;
 }
 
 p {
@@ -715,6 +705,10 @@ html ::-webkit-scrollbar-thumb {
 
 .notion-callout .notion-column .notion-text {
   min-height: auto !important;
+}
+
+.notion-callout h2 {
+  text-align: left !important;
 }
 
 @media (max-width: 600px) {
