notion callout headings

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -404,7 +404,7 @@ html ::-webkit-scrollbar{
     min-height: auto !important;
 }
 
-.notion-callout h2{
+.notion-callout .notion-heading{
     text-align: left !important;
 }
 
