--- a/style/main.css
+++ b/style/main.css
@@ -752,6 +752,9 @@ html ::-webkit-scrollbar-thumb {
   .notion-callout__content {
     margin-inline-start: 0px !important;
   }
+  .notion-callout.bg-gray-light .notion-column-list {
+    flex-direction: column-reverse !important;
+  }
   .notion-collection-gallery.medium {
     grid-template-columns: 1fr !important;
   }
@@ -767,6 +770,8 @@ html ::-webkit-scrollbar-thumb {
   .notion-callout .notion-column {
     flex-grow: 1 !important;
   }
+}
+@media screen and (max-width: 1150px) {
   .notion-collection-gallery.medium {
     grid-template-columns: 1fr !important;
   }
