flex wrap-reviews

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -485,9 +485,9 @@ html ::-webkit-scrollbar{
 }
 
 @media screen and (max-width: 1090px){
-    .notion-callout .notion-column{
-        flex-grow: 1 !important;
-    }  
+    .notion-column-list{
+        flex-wrap: wrap !important;
+    }
 }
 
 @media screen and (max-width:1150px){
