--- a/style/main.css
+++ b/style/main.css
@@ -767,8 +767,8 @@ html ::-webkit-scrollbar-thumb {
   }
 }
 @media screen and (max-width: 1090px) {
-  .notion-callout .notion-column {
-    flex-grow: 1 !important;
+  .notion-column-list {
+    flex-wrap: wrap !important;
   }
 }
 @media screen and (max-width: 1150px) {
