--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -488,6 +488,9 @@ html ::-webkit-scrollbar{
     .notion-column-list{
         flex-wrap: wrap !important;
     }
+    .notion-column{
+        flex-grow: 1 !important;
+    }
 }
 
 @media screen and (max-width:1150px){
