--- a/style/main.css
+++ b/style/main.css
@@ -770,6 +770,9 @@ html ::-webkit-scrollbar-thumb {
   .notion-column-list {
     flex-wrap: wrap !important;
   }
+  .notion-column {
+    flex-grow: 1 !important;
+  }
 }
 @media screen and (max-width: 1150px) {
   .notion-collection-gallery.medium {
