--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -485,10 +485,10 @@ html ::-webkit-scrollbar{
 }
 
 @media screen and (max-width: 1090px){
-    .notion-column-list{
+    .notion-callout .notion-column-list{
         flex-wrap: wrap !important;
     }
-    .notion-column{
+    .notion-callout .notion-column-list .notion-column{
         flex-grow: 1 !important;
     }
 }
