thumbnail in review section

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -491,6 +491,9 @@ html ::-webkit-scrollbar{
     .notion-callout .notion-column-list .notion-column{
         flex-grow: 1 !important;
     }
+    .notion-callout .notion-column:first-child{
+        max-width: fit-content !important;
+    }
 }
 
 @media screen and (max-width:1150px){
