--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -354,6 +354,7 @@ html ::-webkit-scrollbar{
 .notion-callout{
     padding: 2rem !important;
     padding-top: 20px !important;
+    text-align: left !important;
     border: 1px solid var(--color-border-default) !important;
     transition: all .15s ease-out !important;
     border-radius: 20px !important;
