--- a/style/main.css
+++ b/style/main.css
@@ -658,6 +658,7 @@ html ::-webkit-scrollbar-thumb {
 .notion-callout {
   padding: 2rem !important;
   padding-top: 20px !important;
+  text-align: left !important;
   border: 1px solid var(--color-border-default) !important;
   transition: all 0.15s ease-out !important;
   border-radius: 20px !important;
