--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -489,11 +489,8 @@ html ::-webkit-scrollbar{
     .notion-callout .notion-column-list{
         flex-wrap: wrap !important;
     }
-    .notion-callout .notion-column-list .notion-column{
+    .notion-column{
         flex-grow: 1 !important;
-    }
-    .notion-callout .notion-column:first-child{
-        max-width: fit-content !important;
     }
 }
 
