--- a/style/main.css
+++ b/style/main.css
@@ -771,11 +771,8 @@ html ::-webkit-scrollbar-thumb {
   .notion-callout .notion-column-list {
     flex-wrap: wrap !important;
   }
-  .notion-callout .notion-column-list .notion-column {
+  .notion-column {
     flex-grow: 1 !important;
-  }
-  .notion-callout .notion-column:first-child {
-    max-width: fit-content !important;
   }
 }
 @media screen and (max-width: 1150px) {
