--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,1 +1,7 @@
 //footer
+.super-footer{
+    max-width: 1440px !important;
+    margin: 0 auto !important;
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
+}
