--- a/style/main.css
+++ b/style/main.css
@@ -141,6 +141,13 @@ p {
   font-size: var(--font-size-1) !important;
 }
 
+.super-footer {
+  max-width: 1440px !important;
+  margin: 0 auto !important;
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
+}
+
 .notion-header__cover.has-cover {
   position: absolute !important;
   width: 100% !important;
@@ -667,7 +674,6 @@ html ::-webkit-scrollbar-thumb {
 }
 
 #page-index .notion-callout {
-  margin: 0 !important;
   overflow: visible !important;
 }
 
@@ -717,6 +723,10 @@ html ::-webkit-scrollbar-thumb {
 
 .notion-callout .notion-heading {
   text-align: left !important;
+}
+
+.notion-callout.border {
+  margin-bottom: 2rem !important;
 }
 
 @media (max-width: 600px) {
