--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,6 @@
 //footer
 .super-footer{
-    max-width: 1440px !important;
-    margin: 0 auto !important;
+    margin: 0 96px !important;
     padding-left: 2rem !important;
     padding-right: 2rem !important;
 }
