--- a/style/main.css
+++ b/style/main.css
@@ -142,8 +142,7 @@ p {
 }
 
 .super-footer {
-  max-width: 1440px !important;
-  margin: 0 auto !important;
+  margin: 0 96px !important;
   padding-left: 2rem !important;
   padding-right: 2rem !important;
 }
