--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -50,14 +50,14 @@
     top: 0 !important;
 }
 
-.theme-switch{
+.toggle-switch{
     width: 22px !important;
     height: 22px !important;
     transition: all .3s ease-in-out !important;
     opacity: 0.5 !important;
     cursor: pointer !important;
-    /* margin-right: 25px !important;
-    margin-left: -10px !important; */
+    margin-right: 25px !important;
+    margin-left: -10px !important;
 }
 
 .dark-mode-icon svg, .light-mode-icon svg{
