--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -13,13 +13,13 @@
     padding-left: 0px !important;
 }
 
-.super-navbar__menu-wrapper{
+/* .super-navbar__menu-wrapper{
      width: calc(100% - 193px) !important;
     max-width: calc(1680px - 200px) !important;
     margin: 0 auto !important;
     padding-right: 0 !important;
     padding-top: 30px !important;
-}
+} */
 
 
 .super-navbar__logo{
@@ -36,19 +36,16 @@
     transition: opacity .3s ease-in-out !important;
 }
 
-.super-navbar__menu{
+/* .super-navbar__menu{
     border-radius: 20px !important;
     border: 1px solid var(--color-border-default) !important;
     color: var(--color-text-default) !important;
     background: var(--color-bg-default) !important;
 
-}
+} */
 
 //hamburger menu
 
-.super-navbar__menu-close{
-    top: 0 !important;
-}
 
 .toggle-switch{
     width: 22px !important;
@@ -106,7 +103,7 @@
 
 
 
-.notion-dropdown{
+/* .notion-dropdown{
     width: 100% !important;
 }
 
@@ -116,7 +113,7 @@
     border: 1px solid var(--color-border-default) !important;
     padding: 10px !important;
     border-radius: 8px !important;
-}
+} */
 
 
 @media (max-width: 546px){
