--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,8 @@
 //footer
 .super-footer{
-    margin: 0 96px !important;
+    width: calc(100% - 193px) !important;
+    max-width: calc(1680px - 200px) !important;
+    margin: 20px auto !important;
     padding-left: 2rem !important;
     padding-right: 2rem !important;
 }
