--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -21,6 +21,9 @@
     padding-top: 30px !important;
 } */
 
+.super-navbar__menu-open{
+    display: none !important;
+}
 
 .super-navbar__logo{
     padding: 0px !important;
@@ -119,6 +122,9 @@
 @media (max-width: 546px){
     .super-navbar{
         width: calc(100% - 40px) !important;
+    }
+    .super-navbar__menu-open{
+        display: flex !important;
     }
 
 }
