--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -21,9 +21,6 @@
     padding-top: 30px !important;
 } */
 
-.super-navbar__menu-open{
-    display: none !important;
-}
 
 .super-navbar__logo{
     padding: 0px !important;
@@ -34,7 +31,7 @@
     cursor: pointer !important;
     align-items: center !important;
     justify-content: center !important;
-    display: flex !important;
+    display: none !important;
     opacity: 0.5 !important;
     transition: opacity .3s ease-in-out !important;
 }
@@ -123,7 +120,7 @@
     .super-navbar{
         width: calc(100% - 40px) !important;
     }
-    .super-navbar__menu-open{
+    .super-navbar__button{
         display: flex !important;
     }
 
