--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,12 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 :root{
+    --font-size-0: 1rem;
     --font-size-1: 1.375rem;
     --font-size-2: 1.5rem;
     --font-size-3: 2rem;
     --font-size-4: 2.5rem;
     --font-size-5: 3rem;
-    --font-size-6: 5.5rem;
+    --font-size-6: 4rem;
+    --font-size-7: 5.5rem;
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -15,7 +17,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 h1.notion-heading{
-    font-size: var(--font-size-6) !important;
+    font-size: var(--font-size-7) !important;
     font-weight: 500 !important;
     line-height: 1em !important;
     padding-bottom: 1rem !important;
@@ -45,4 +47,16 @@ h3.notion-heading{
 
 p{
     font-size: var(--font-size-1) !important;
+}
+
+
+@media screen and (max-width:1150px){
+
+    h1.notion-heading{
+        font-size: var(--font-size-6) !important;
+    }
+
+    p{
+        font-size: var(--font-size-0) !important;
+    }
 }
