--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -258,8 +258,7 @@ tbody.notion-collection-table__body{
     background: var(--color-cta-background) !important;
     padding: 0.6rem 1.6rem !important;
     margin: 20px 0px !important;
-    font-size: 1.125 !important;
-    font-family: "Satoshi Bold", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
+    font-size: var(--font-size-1) !important;
     letter-spacing: 0.05rem !important;
     border-radius: 50px !important;
     border: 0.2rem solid var(--color-border-default) !important;
@@ -490,6 +489,9 @@ html ::-webkit-scrollbar-thumb {
 @media screen and (max-width:1150px){
     .notion-collection-gallery.medium{
         grid-template-columns: 1fr !important;
+    }
+    .notion-root .notion-text .notion-text__content .notion-semantic-string span strong .notion-link, .notion-text .notion-text__content .notion-semantic-string span .notion-link strong{
+        font-size: var(--font-size-0) !important;
     }
 }
 
