--- a/style/main.css
+++ b/style/main.css
@@ -97,12 +97,14 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 :root {
+  --font-size-0: 1rem;
   --font-size-1: 1.375rem;
   --font-size-2: 1.5rem;
   --font-size-3: 2rem;
   --font-size-4: 2.5rem;
   --font-size-5: 3rem;
-  --font-size-6: 5.5rem;
+  --font-size-6: 4rem;
+  --font-size-7: 5.5rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -110,7 +112,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1.notion-heading {
-  font-size: var(--font-size-6) !important;
+  font-size: var(--font-size-7) !important;
   font-weight: 500 !important;
   line-height: 1em !important;
   padding-bottom: 1rem !important;
@@ -141,6 +143,14 @@ p {
   font-size: var(--font-size-1) !important;
 }
 
+@media screen and (max-width: 1150px) {
+  h1.notion-heading {
+    font-size: var(--font-size-6) !important;
+  }
+  p {
+    font-size: var(--font-size-0) !important;
+  }
+}
 .super-footer {
   width: calc(100% - 193px) !important;
   max-width: 1480px !important;
@@ -588,8 +598,7 @@ tbody.notion-collection-table__body {
   background: var(--color-cta-background) !important;
   padding: 0.6rem 1.6rem !important;
   margin: 20px 0px !important;
-  font-size: 1.125 !important;
-  font-family: "Satoshi Bold", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
+  font-size: var(--font-size-1) !important;
   letter-spacing: 0.05rem !important;
   border-radius: 50px !important;
   border: 0.2rem solid var(--color-border-default) !important;
@@ -786,5 +795,8 @@ html ::-webkit-scrollbar-thumb {
 @media screen and (max-width: 1150px) {
   .notion-collection-gallery.medium {
     grid-template-columns: 1fr !important;
+  }
+  .notion-root .notion-text .notion-text__content .notion-semantic-string span strong .notion-link, .notion-text .notion-text__content .notion-semantic-string span .notion-link strong {
+    font-size: var(--font-size-0) !important;
   }
 }/*# sourceMappingURL=main.css.map */
