--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,4 +5,16 @@
     margin: 20px auto !important;
     padding-left: 2rem !important;
     padding-right: 2rem !important;
+    background: var(--color-callout-background) !important;
+    backdrop-filter: blur(10px) !important;
+    color: var(--color-text-default) !important;
+    border-radius: 20px !important;
+}
+
+@media (max-width: 546px){
+    .super-footer{
+        width: 100% !important;
+        max-width: 100% !important;
+        border-radius: 0px !important;
+    }
 }
