--- a/style/main.css
+++ b/style/main.css
@@ -613,6 +613,10 @@ tbody.notion-collection-table__body {
   opacity: 1 !important;
 }
 
+a:hover {
+  color: var(--color-link-default) !important;
+}
+
 .notion-root .notion-text .notion-text__content .notion-semantic-string span strong .notion-link, .notion-text .notion-text__content .notion-semantic-string span .notion-link strong {
   color: var(--color-cta-text) !important;
   background: var(--color-cta-background) !important;
