--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -253,10 +253,6 @@ tbody.notion-collection-table__body{
     }
 }
 
-a:hover{
-    color: var(--color-link-default) !important;
-}
-
 .notion-root .notion-text .notion-text__content .notion-semantic-string span strong .notion-link, .notion-text .notion-text__content .notion-semantic-string span .notion-link strong{
     color: var(--color-cta-text) !important;
     background: var(--color-cta-background) !important;
@@ -273,7 +269,7 @@ a:hover{
     transition: background .2s ease-in-out !important;
 }
 
-.notion-root .notion-text .notion-text__content .notion-semantic-string span strong .notion-link, .notion-text .notion-text__content .notion-semantic-string span .notion-link strong:hover{
+.notion-root .notion-text .notion-text__content .notion-semantic-string span strong .notion-link:hover, .notion-root .notion-text .notion-text__content .notion-semantic-string span .notion-link strong:hover{
     background: transparent !important;
     color: var(--color-text-default) !important;
 }
