--- a/style/main.css
+++ b/style/main.css
@@ -163,6 +163,10 @@ p {
   border-radius: 20px !important;
 }
 
+.super-footer.corners .super-footer__links:hover, .super-footer.floating .super-footer__links:hover {
+  color: var(--color-link-default) !important;
+}
+
 @media (max-width: 546px) {
   .super-footer {
     width: 100% !important;
