--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -11,6 +11,11 @@
     border-radius: 20px !important;
 }
 
+//links on hover
+.super-footer.corners .super-footer__links:hover, .super-footer.floating .super-footer__links:hover{
+    color: var(--color-link-default) !important;
+}
+
 @media (max-width: 546px){
     .super-footer{
         width: 100% !important;
