--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -12,7 +12,7 @@
 }
 
 //links on hover
-.super-footer.corners .super-footer__links:hover, .super-footer.floating .super-footer__links:hover{
+.super-footer__link:hover{
     color: var(--color-link-default) !important;
 }
 
