--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -254,7 +254,7 @@ tbody.notion-collection-table__body{
 }
 
 .notion-root .notion-text .notion-text__content .notion-semantic-string span strong .notion-link, .notion-text .notion-text__content .notion-semantic-string span .notion-link strong{
-    color: var(--color-cta-text) !important;
+    color: var(--color-text-default) !important;
     background: var(--color-callout-background) !important;
     padding: 0.8rem 1.6rem !important;
     margin: 20px 0px !important;
@@ -273,8 +273,8 @@ tbody.notion-collection-table__body{
     padding-left: 2rem !important;
     padding-right: 2rem !important;
     transition: .2s ease-in-out !important;
-    background: transparent !important;
-    color: var(--color-text-default) !important;
+    background: var(--color-cta-background) !important;
+    color: var(--color-cta-text) !important;
 }
 
 
