--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -16,6 +16,10 @@
     color: var(--color-link-default) !important;
 }
 
+.super-footer__footnote{
+    color: var(--color-text-default) !important;
+}
+
 @media (max-width: 546px){
     .super-footer{
         width: 100% !important;
