font sizes @media

--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -47,11 +47,10 @@
 .parent-page__index {
 
     .notion-text{
-        width: 58.33333333% !important;
+        width: 80% !important;
         margin: 0 auto !important;
     }
     .notion-heading{
-        width: 58.33333333% !important;
         margin-left: auto !important;
         margin-right: auto !important;
         margin-bottom: 1.5rem !important;
