--- a/style/main.css
+++ b/style/main.css
@@ -143,7 +143,7 @@ p {
   font-size: var(--font-size-1) !important;
 }
 
-@media screen and (max-width: 1150px) {
+@media screen and (max-width: 1288px) {
   h1.notion-heading {
     font-size: var(--font-size-6) !important;
   }
@@ -363,11 +363,10 @@ p {
 }
 
 .parent-page__index .notion-text {
-  width: 58.33333333% !important;
+  width: 80% !important;
   margin: 0 auto !important;
 }
 .parent-page__index .notion-heading {
-  width: 58.33333333% !important;
   margin-left: auto !important;
   margin-right: auto !important;
   margin-bottom: 1.5rem !important;
