--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -123,5 +123,10 @@
     .super-navbar__button{
         display: flex !important;
     }
+    .super-navbar__menu-open:checked~.super-navbar__menu-item-list{
+        display: block !important;
+        opacity: 1 !important;
+
+    }
 
 }
