--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -298,8 +298,7 @@ html ::-webkit-scrollbar-thumb {
     color: var(--color-text-default) !important;
 
     .notion-column-list{
-        flex-wrap: nowrap !important;
-        gap: 3rem !important;
+        flex-wrap: wrap !important;
     }
 }
 
@@ -365,7 +364,6 @@ html ::-webkit-scrollbar-thumb {
 
 .notion-callout .notion-column-list{
     align-items: center !important;
-    gap: 20px !important;
 }
 
 #page-index .notion-callout .notion-callout__icon{
@@ -412,7 +410,7 @@ html ::-webkit-scrollbar-thumb {
 
 //media queries
 
-@media (max-width: 600px) {
+@media (max-width: 680px) {
     tbody.notion-collection-table__body{
         margin-top: 4rem !important;
         flex-direction: column !important;
@@ -431,6 +429,10 @@ html ::-webkit-scrollbar-thumb {
 
     .notion-collection-card__content{
         width: auto !important;
+    }
+    .notion-column{
+        width: 100% !important;
+        margin-inline-start: 0 !important;
     }
     
 }
@@ -489,6 +491,13 @@ html ::-webkit-scrollbar-thumb {
     }
     .notion-root .notion-text .notion-text__content .notion-semantic-string span strong .notion-link, .notion-text .notion-text__content .notion-semantic-string span .notion-link strong{
         font-size: var(--font-size-0) !important;
+    }
+
+}
+
+@media screen and (max-width:992px){
+    .notion-column{
+       flex-grow:1 !important; 
     }
 }
 
