--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -340,7 +340,7 @@ html ::-webkit-scrollbar-thumb {
 
 //callouts--Reviews
 .notion-callout{
-    padding: 2rem !important;
+    padding: 24px !important;
     padding-top: 20px !important;
     text-align: left !important;
     border: 1px solid var(--color-border-default) !important;
