--- a/style/main.css
+++ b/style/main.css
@@ -663,7 +663,8 @@ html ::-webkit-scrollbar-thumb {
   color: var(--color-text-default) !important;
 }
 #page-index .notion-callout.bg-gray-light .notion-column-list {
-  flex-wrap: wrap !important;
+  flex-wrap: nowrap !important;
+  gap: 3rem !important;
 }
 
 #page-index .notion-callout.bg-gray-light:hover {
@@ -700,7 +701,7 @@ html ::-webkit-scrollbar-thumb {
 }
 
 .notion-callout {
-  padding: 24px !important;
+  padding: 25px !important;
   padding-top: 20px !important;
   text-align: left !important;
   border: 1px solid var(--color-border-default) !important;
@@ -708,6 +709,9 @@ html ::-webkit-scrollbar-thumb {
   border-radius: 20px !important;
   margin-bottom: 24px !important;
   font-size: var(--font-size-1) !important;
+}
+.notion-callout .notion-column-list {
+  flex-wrap: wrap !important;
 }
 
 #page-index .notion-callout {
@@ -722,6 +726,7 @@ html ::-webkit-scrollbar-thumb {
 
 .notion-callout .notion-column-list {
   align-items: center !important;
+  gap: 20px !important;
 }
 
 #page-index .notion-callout .notion-callout__icon {
