--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -45,8 +45,21 @@
 } */
 
 //hamburger menu
+.super-navbar__menu-wrapper {
+    display: none !important;
+    transition: all 0.3s ease !important;
+  }
+  
+  .super-navbar__menu-wrapper.open {
+    display: block !important;
+  }
+  
+  .super-navbar__menu-wrapper.enter-done {
+    display: block !important;
+  }
 
 
+//toggle light and dark theme
 .toggle-switch{
     width: 22px !important;
     height: 22px !important;
