--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -57,5 +57,6 @@ p{
 
     p{
         font-size: var(--font-size-0) !important;
+        color: var(--color-paragraph-default) !important;
     }
 }
