--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -70,4 +70,14 @@
             flex-direction: column !important;
     }
     }
+
+    .notion-collection-gallery.small{
+        grid-template-columns: repeat(2, 1fr) !important;
+    }
+}
+
+@media screen and (max-width:863px){
+    .notion-collection-gallery.small{
+        grid-template-columns: repeat(1, 1fr) !important;
+    }
 }
