--- a/style/main.css
+++ b/style/main.css
@@ -384,6 +384,14 @@ p {
   .parent-page__index tbody.notion-collection-table__body {
     flex-direction: column !important;
   }
+  .notion-collection-gallery.small {
+    grid-template-columns: repeat(2, 1fr) !important;
+  }
+}
+@media screen and (max-width: 863px) {
+  .notion-collection-gallery.small {
+    grid-template-columns: repeat(1, 1fr) !important;
+  }
 }
 .super-content.max-width {
   margin: auto !important;
