--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -232,6 +232,7 @@ tbody.notion-collection-table__body{
 
 .notion-column{
     margin: 0px !important;
+    flex-grow: 1 !important;
 }
 
 //caption dash
