--- a/style/main.css
+++ b/style/main.css
@@ -388,7 +388,7 @@ p {
     grid-template-columns: repeat(2, 1fr) !important;
   }
 }
-@media screen and (max-width: 863px) {
+@media (max-width: 863px) {
   .notion-collection-gallery.small {
     grid-template-columns: repeat(1, 1fr) !important;
   }
