--- a/style/main.css
+++ b/style/main.css
@@ -165,12 +165,12 @@ p {
   border-radius: 20px !important;
 }
 
-.super-footer__link:hover {
+.super-footer.floating .super-footer__links a.super-footer__link:hover p {
   color: var(--color-link-default) !important;
 }
 
 .super-footer__footnote {
-  color: var(--color-text-default) !important;
+  color: var(--color-paragraph-default) !important;
 }
 
 @media (max-width: 546px) {
