--- a/style/main.css
+++ b/style/main.css
@@ -100,6 +100,7 @@ p, h1, h2, h3, h4, h5, h6 {
 
 :root {
   --font-size-0: 1rem;
+  --font-size-05: 1.1875rem;
   --font-size-1: 1.375rem;
   --font-size-2: 1.5rem;
   --font-size-3: 2rem;
@@ -127,16 +128,20 @@ h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
 
 h2.notion-heading {
   font-size: var(--font-size-5) !important;
-  text-align: center !important;
-  line-height: 1.1 !important;
+  /* text-align: center !important; */
+  line-height: 1.3 !important;
   margin-bottom: 1.5rem !important;
   font-weight: 500 !important;
 }
 
 h3.notion-heading {
-  font-size: var(--font-size-4) !important;
-  font-weight: 500 !important;
+  font-size: var(--font-size-05) !important;
+  font-weight: 700 !important;
+  text-transform: uppercase !important;
   line-height: 1.25 !important;
+  opacity: 0.5 !important;
+  letter-spacing: 0.1rem !important;
+  margin-top: 1rem !important;
   margin-bottom: 1.5rem !important;
 }
 
