--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,10 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 :root{
-    --font-size-0: 1rem;
-    --font-size-05: 1.1875rem; 
-    --font-size-1: 1.375rem;
-    --font-size-2: 1.5rem;
+    --font-size-0: 1rem; 
+    --font-size-1: 1.125rem;
+    --font-size-2: 1.1875rem;
     --font-size-3: 2rem;
     --font-size-4: 2.5rem;
     --font-size-5: 3rem;
@@ -49,7 +48,7 @@ h3.notion-heading{
     margin-bottom: 1.5rem !important;
 }
 
-p{
+p, p.notion-text__content{
     font-size: var(--font-size-1) !important;
     color: var(--color-paragarph-default) !important;
 }
