--- a/style/main.css
+++ b/style/main.css
@@ -100,9 +100,8 @@ p, h1, h2, h3, h4, h5, h6 {
 
 :root {
   --font-size-0: 1rem;
-  --font-size-05: 1.1875rem;
-  --font-size-1: 1.375rem;
-  --font-size-2: 1.5rem;
+  --font-size-1: 1.125rem;
+  --font-size-2: 1.1875rem;
   --font-size-3: 2rem;
   --font-size-4: 2.5rem;
   --font-size-5: 3rem;
@@ -145,7 +144,7 @@ h3.notion-heading {
   margin-bottom: 1.5rem !important;
 }
 
-p {
+p, p.notion-text__content {
   font-size: var(--font-size-1) !important;
   color: var(--color-paragarph-default) !important;
 }
